# onenm_local_llm

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  pubspec.yaml
.github/ISSUE_TEMPLATE/: model_request.md
android/: .gitignore  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: onenm_bridge.cpp
android/src/main/kotlin/com/example/onenm_local_llm/: OneNmNative.kt
android/src/main/kotlin/com/theorangeshade/onenm_local_llm/: OneNmNative.kt  OnenmLocalLlmPlugin.kt
android/src/test/kotlin/com/theorangeshade/onenm_local_llm/: OnenmLocalLlmPluginTest.kt
example/android/app/: build.gradle
example/android/app/src/main/kotlin/com/theorangeshade/onenm_local_llm_example/: MainActivity.kt
examples/flutter-llama.cpp/local_ai_chat_app/: .gitignore  README.md  pubspec.yaml
examples/flutter-llama.cpp/local_ai_chat_app/android/app/: build.gradle
examples/flutter-llama.cpp/local_ai_chat_app/android/app/src/main/: AndroidManifest.xml
examples/flutter-llama.cpp/local_ai_chat_app/lib/: chatbot_app.dart  main.dart
examples/flutter-llama.cpp/local_ai_chat_app/test/: widget_test.dart
examples/flutter-llama.cpp/local_ai_chat_app/windows/: CMakeLists.txt
examples/flutter-llama.cpp/local_ai_chat_app/windows/runner/: Runner.rc  main.cpp
examples/flutter-llama.cpp/local_ai_summarizer/: README.md  pubspec.yaml
examples/flutter-llama.cpp/local_ai_summarizer/android/app/: build.gradle
examples/flutter-llama.cpp/local_ai_summarizer/android/app/src/main/: AndroidManifest.xml
examples/flutter-llama.cpp/local_ai_summarizer/lib/: main.dart  note_summarizer_app.dart
examples/flutter-llama.cpp/local_ai_summarizer/test/: widget_test.dart
flutter-llama.cpp/: .pubignore  CHANGELOG.md  README.md  pubspec.yaml
flutter-llama.cpp/android/: settings.gradle
flutter-llama.cpp/android/src/main/: AndroidManifest.xml
flutter-llama.cpp/android/src/main/cpp/: onenm_bridge.cpp
flutter-llama.cpp/example/lib/: main.dart
flutter-llama.cpp/example/test/: widget_test.dart
flutter-llama.cpp/lib/: models.dart  onenm_local_llm.dart  onenm_local_llm_method_channel.dart  onenm_local_llm_platform_interface.dart
lib/: onenm_local_llm_method_channel.dart
onenm_local_llm/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pubspec.yaml
onenm_local_llm/android/: build.gradle
onenm_local_llm/android/src/main/: AndroidManifest.xml
onenm_local_llm/android/src/main/cpp/: CMakeLists.txt  onenm_bridge.cpp
onenm_local_llm/android/src/main/kotlin/com/example/onenm_local_llm/: OneNmNative.kt  OnenmLocalLlmPlugin.kt
onenm_local_llm/android/src/test/kotlin/com/example/onenm_local_llm/: OnenmLocalLlmPluginTest.kt
onenm_local_llm/example/: README.md  pubspec.yaml
onenm_local_llm/example/android/app/: build.gradle
onenm_local_llm/example/android/app/src/main/: AndroidManifest.xml
onenm_local_llm/example/android/app/src/main/kotlin/com/example/onenm_local_llm_example/: MainActivity.kt
onenm_local_llm/example/integration_test/: plugin_integration_test.dart
onenm_local_llm/example/lib/: main.dart
onenm_local_llm/lib/: models.dart  onenm_local_llm.dart  onenm_local_llm_method_channel.dart  onenm_local_llm_platform_interface.dart
onenm_local_llm/test/: onenm_local_llm_method_channel_test.dart  onenm_local_llm_test.dart
(+2 files in other folders)
